[gd_scene load_steps=19 format=3 uid="uid://c0384jl6ovn3p"]

[ext_resource type="Script" uid="uid://6xmr6mgqykmw" path="res://option_menu.gd" id="1_2wwwi"]
[ext_resource type="Texture2D" uid="uid://b88ptd6kxcive" path="res://Resources/BGs/night-spooky-halloween-graveyard-cartoon-vector/2303.w063.n005.34B.p1.34.jpg" id="1_uofij"]
[ext_resource type="FontFile" uid="uid://b88f15c8osw0s" path="res://Fonts/HellsCemetery-Regular.ttf" id="2_nb24t"]
[ext_resource type="FontFile" uid="uid://d1q5ckqvb8bl1" path="res://Fonts/Blackcraft.ttf" id="3_rr3ek"]
[ext_resource type="AudioStream" uid="uid://8txvx8rgp2tk" path="res://Resources/Audio/SFX/Menu/Click.ogg" id="4_6jp3d"]
[ext_resource type="AudioStream" uid="uid://dcbm2rouun1e1" path="res://Resources/Audio/SFX/Menu/Hover.ogg" id="5_7olki"]
[ext_resource type="AudioStream" uid="uid://b0gvmwivh8gky" path="res://Resources/Audio/BGMs/fresh blood.mp3" id="6_l34fo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nh4vs"]
texture = ExtResource("1_uofij")
modulate_color = Color(0.633757, 0.633757, 0.633757, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_me5vn"]
bg_color = Color(0.0941176, 0.109804, 0.0784314, 0.392157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0941176, 0.109804, 0.0784314, 0.392157)
shadow_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_61kpg"]
line_spacing = 5.0
font = ExtResource("2_nb24t")
font_size = 75
font_color = Color(0.92549, 0.87451, 0.8, 1)
outline_size = 5
outline_color = Color(0.235294, 0.239216, 0.215686, 1)
shadow_color = Color(0.92549, 0.87451, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmd3v"]
bg_color = Color(0.411765, 0.458824, 0.396078, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.117647, 0.12549, 0.117647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.117647, 0.12549, 0.117647, 0.196078)
shadow_size = 5
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w18xu"]
bg_color = Color(0.411765, 0.458824, 0.396078, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.235294, 0.239216, 0.215686, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hudf"]
bg_color = Color(0.92549, 0.87451, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6waox"]
bg_color = Color(0.92549, 0.87451, 0.8, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_04srl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1dby"]
bg_color = Color(0.92549, 0.87451, 0.8, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.235294, 0.239216, 0.215686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.235294, 0.239216, 0.215686, 0.196078)
shadow_size = 5
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32evs"]
bg_color = Color(0.235294, 0.239216, 0.215686, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.117647, 0.12549, 0.117647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.117647, 0.12549, 0.117647, 0.196078)
shadow_size = 5
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d61a8"]
bg_color = Color(0.411765, 0.458824, 0.396078, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.117647, 0.12549, 0.117647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.117647, 0.12549, 0.117647, 0.196078)
shadow_size = 5
shadow_offset = Vector2(-5, 5)

[node name="Option_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wwwi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nh4vs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295312
anchor_top = 0.0847222
anchor_right = 0.720312
anchor_bottom = 0.891667
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_me5vn")

[node name="CenterContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_right = -0.0880737
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Panel/CenterContainer"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_61kpg")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 50
columns = 2

[node name="Music" type="Label" parent="VBoxContainer/Panel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_colors/font_outline_color = Color(0.0941176, 0.109804, 0.0784314, 1)
theme_override_fonts/font = ExtResource("3_rr3ek")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rmd3v")
text = "Music
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Musicslider" type="HSlider" parent="VBoxContainer/Panel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/slider = SubResource("StyleBoxFlat_w18xu")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_6hudf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_6waox")
rounded = true

[node name="SFX" type="Label" parent="VBoxContainer/Panel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_colors/font_outline_color = Color(0.0941176, 0.109804, 0.0784314, 1)
theme_override_fonts/font = ExtResource("3_rr3ek")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rmd3v")
text = "SFX
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/Panel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/slider = SubResource("StyleBoxFlat_w18xu")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_6hudf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_6waox")
rounded = true

[node name="Back" type="Button" parent="VBoxContainer/Panel/CenterContainer"]
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_colors/font_pressed_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_outline_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_fonts/font = ExtResource("3_rr3ek")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_04srl")
theme_override_styles/hover = SubResource("StyleBoxFlat_a1dby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_32evs")
theme_override_styles/normal = SubResource("StyleBoxFlat_d61a8")
text = "Back to Main Menu"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6jp3d")
volume_db = -5.0
bus = &"SFX"

[node name="HoverOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7olki")
volume_db = -5.0
bus = &"SFX"

[node name="OptionsMenuBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_l34fo")
mix_target = 1
bus = &"BGM"

[node name="Credit" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.177
anchor_top = 0.869
anchor_right = 0.366
anchor_bottom = 0.982
offset_left = 0.559998
offset_top = 0.320007
offset_right = 0.519958
offset_bottom = -0.0400391
grow_horizontal = 2
theme_override_colors/font_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0.117647, 0.12549, 0.117647, 1)
theme_override_colors/font_outline_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_nb24t")
theme_override_font_sizes/font_size = 60
text = "By : Prathamesh_J"
horizontal_alignment = 2
vertical_alignment = 2
uppercase = true

[connection signal="mouse_entered" from="VBoxContainer/Panel/CenterContainer/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Panel/CenterContainer/Back" to="." method="_on_back_pressed"]
